# HEDGE-ExpertAI

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  QWEN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: D3.1-Evaluation-Report.md  api-reference.md  architecture.md  configuration-reference.md  deployment-guide.md  development-guide.md  evaluation-and-testing.md  plugin-integration-guide.md  progress-report-april-2026.md  saref-ontology-mapping.md  security-roadmap.md  services-guide.md  widget-quick-start.md
docs/openapi/: chat-intent.openapi.json  discovery-ranking.openapi.json  expert-recommend.openapi.json  gateway.openapi.json  metadata-ingest.openapi.json  mock-api.openapi.json
docs/proposals/: HEDGE-IoT-OC1-Proposal-HedgeExpertAI.md
evaluation/: evaluate.py  test_queries.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/widget/: demo.html  hedge-expert-widget.css  hedge-expert-widget.js
hedge-expert-ai/: .gitignore  CHANGELOG.md  README.md
hedge-expert-ai/docs/: configuration-reference.md  deployment-guide.md  development-guide.md
hedge-expert-ai/evaluation/: evaluate.py
hedge-expert-ai/frontend/: index.html
hedge-expert-ai/scripts/: pull-model.sh  seed-data.sh
hedge-expert-ai/shared/: pyproject.toml
hedge-expert-ai/shared/hedge_shared/: __init__.py  config.py  models.py
scripts/: export_openapi.py  healthcheck.sh
services/chat-intent/: Dockerfile
services/discovery-ranking/: Dockerfile  (+1 more)
tests/: conftest.py
(+66 files in other folders)
